--- a/partials/header.html
+++ b/partials/header.html
@@ -1,19 +1,12 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <div class="container">
-        <a class="navbar-brand" href="/index.html">My Blog</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-                <li class="nav-item active">
-                    <a class="nav-link" href="/index.html">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/html/blog.html">Blog</a>
-                </li>
-                <!-- 추후에 다른 페이지를 추가하면 여기에 네비게이션 아이템을 추가할 수 있습니다. -->
-            </ul>
-        </div>
-    </div>
-</nav>
+<div class="sidebar bg-light">
+    <a class="navbar-brand" href="/index.html">My Blog</a>
+    <ul class="navbar-nav">
+        <li class="nav-item active">
+            <a class="nav-link" href="/index.html">Home</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="/html/blog.html">Blog</a>
+        </li>
+        <!-- 추후에 다른 페이지를 추가하면 여기에 네비게이션 아이템을 추가할 수 있습니다. -->
+    </ul>
+</div>
