--- a/partials/header.html
+++ b/partials/header.html
@@ -1,5 +1,5 @@
 <div class="sidebar bg-light">
-    <a class="navbar-brand" href="/index.html">My Blog</a>
+    <a class="navbar-brand" href="/index.html">Rye soup</a>
     <ul class="navbar-nav">
         <li class="nav-item active">
             <a class="nav-link" href="/index.html">Home</a>
