--- a/partials/header.html
+++ b/partials/header.html
@@ -1,12 +1,31 @@
-<div class="sidebar bg-light">
-    <a class="navbar-brand" href="/index.html">Rye soup</a>
-    <ul class="navbar-nav">
-        <li class="nav-item active">
-            <a class="nav-link" href="/index.html">Home</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="/html/blog.html">Blog</a>
-        </li>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/css/styles.css">
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+    <title>My Blog</title>
+</head>
+
+<body>
+    <div class="sidebar">
+        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+        <a class="navbar-brand" href="/index.html">My Blog</a>
+        <a class="nav-link" href="/index.html">Home</a>
+        <a class="nav-link" href="/html/blog.html">Blog</a>
         <!-- 추후에 다른 페이지를 추가하면 여기에 네비게이션 아이템을 추가할 수 있습니다. -->
-    </ul>
-</div>
+    </div>
+
+    <div class="content">
+        <span class="menu-icon" onclick="openNav()">&#9776;</span>
+    </div>
+    
+    <script src="/js/scripts.js"></script>
+</body>
+
+</html>
