--- a/partials/header.html
+++ b/partials/header.html
@@ -1,14 +1,10 @@
-<nav class="sidebar">
-    <div class="container">
-        <a class="navbar-brand" href="/index.html">My Blog</a>
-        <ul class="navbar-nav">
-            <li class="nav-item active">
-                <a class="nav-link" href="/index.html">Home</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="/html/blog.html">Blog</a>
-            </li>
-            <!-- 추후에 다른 페이지를 추가하면 여기에 네비게이션 아이템을 추가할 수 있습니다. -->
-        </ul>
-    </div>
-</nav>
+<div class="sidebar" id="mySidebar">
+    <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+    <a href="/index.html">Home</a>
+    <a href="/html/blog.html">Blog</a>
+    <!-- 추후에 다른 페이지를 추가하면 여기에 네비게이션 아이템을 추가할 수 있습니다. -->
+</div>
+
+<div class="menu-icon" onclick="openNav()">
+    &#9776; Menu
+</div>
