--- a/css/styles.css
+++ b/css/styles.css
@@ -16,7 +16,7 @@ body {
     z-index: 1;
     top: 0;
     left: 0;
-    background-color: #333;
+    background-color: #2c3e50;
     overflow-x: hidden;
     transition: 0.5s;
     padding-top: 60px;
@@ -27,16 +27,18 @@ body {
     padding: 10px 15px;
     text-decoration: none;
     font-size: 25px;
-    color: #000000;
+    color: #ecf0f1;
     display: block;
     transition: 0.3s;
 }
 
 .sidebar a:hover {
     color: #707070;
+    background-color: #34495e;
 }
 
 .closebtn {
+    color: #ecf0f1;
     position: absolute;
     top: 0;
     right: 25px;
