--- a/css/styles.css
+++ b/css/styles.css
@@ -11,12 +11,12 @@ body {
 
 .sidebar {
     height: 100%;
-    width: 0;  /* 초기에 사이드바는 보이지 않도록 설정합니다. */
+    width: 0;
     position: fixed;
     z-index: 1;
     top: 0;
     left: 0;
-    background-color: #2c3e50;
+    background-color: white;
     overflow-x: hidden;
     transition: 0.5s;
     padding-top: 60px;
@@ -27,18 +27,17 @@ body {
     padding: 10px 15px;
     text-decoration: none;
     font-size: 25px;
-    color: #ecf0f1;
+    color: black;  /* 텍스트 색상을 검은색으로 변경 */
     display: block;
     transition: 0.3s;
 }
 
 .sidebar a:hover {
-    color: #707070;
-    background-color: #34495e;
+    color: #f1f1f1;
+    background-color: #555;  /* 호버 시의 배경색을 추가 */
 }
 
 .closebtn {
-    color: #ecf0f1;
     position: absolute;
     top: 0;
     right: 25px;
@@ -47,6 +46,7 @@ body {
 }
 
 .content {
+    margin-left: 0; 
     padding: 1px 16px;
     height: 100%;
 }
@@ -80,39 +80,25 @@ footer {
     background-color: #f5f5f5;
     border-top: 1px solid #ddd;
 }
-/* Dropdown Content */
-.dropdown-content {
-    display: none;
-    position: relative;
+
+/* Submenu Styles */
+
+.submenu a {
+    font-size: 25px;
+    display: block;
+    transition: 0.3s;
 }
 
-.submenu:hover .dropdown-content {
+.submenu-items {
+    display: none;  /* 초기 상태에서 하위 메뉴 항목은 숨김 처리 */
+    transition: 0.3s;  /* 부드럽게 펼쳐지는 효과를 위한 transition */
+}
+
+.submenu:hover .submenu-items {
     display: block;
 }
 
-.sub-dropdown-content {
-    display: none;
-    position: relative;
-    top: 0;
-    left: 100%;
-}
-
-.dropdown-content:hover .sub-dropdown-content {
-    display: block;
-}
-
-/* 반응형 스타일 */
-@media screen and (max-width: 768px) {
-    .content {
-        padding: 1px 8px;
-    }
-    .sidebar a {
-        font-size: 20px;
-    }
-    .closebtn {
-        font-size: 28px;
-    }
-    .menu-icon {
-        font-size: 24px;
-    }
+.submenu-detail a {
+    font-size: 20px;
+    padding-left: 20px;
 }
