--- a/partials/header.html
+++ b/partials/header.html
@@ -3,19 +3,20 @@
     <a href="/index.html">Home</a>
     <div class="submenu">
         <a href="/html/blog.html">Blog</a>
-        <div class="dropdown-content">
-            <a href="#">코딩</a>
-            <div class="sub-dropdown-content">
-                <a href="#">파이썬</a>
-                <a href="#">VBA</a>
-                <a href="#">애플스크립트</a>
-                <a href="#">자바</a>
-                <a href="#">C언어</a>
+        <div class="submenu-items">
+            <a href="/html/coding.html">코딩</a>
+            <div class="submenu-detail">
+                <a href="/html/python.html">파이썬</a>
+                <a href="/html/vba.html">VBA</a>
+                <a href="/html/applescript.html">애플스크립트</a>
+                <a href="/html/java.html">자바</a>
+                <a href="/html/c.html">C언어</a>
             </div>
-            <a href="#">보안</a>
-            <a href="#">자격증</a>
+            <a href="/html/security.html">보안</a>
+            <a href="/html/certificate.html">자격증</a>
         </div>
     </div>
+    <!-- 추후에 다른 페이지를 추가하면 여기에 네비게이션 아이템을 추가할 수 있습니다. -->
 </div>
 
 <div class="menu-icon" onclick="openNav()">
