--- a/partials/header.html
+++ b/partials/header.html
@@ -1,24 +1,10 @@
-<div class="sidebar" id="mySidebar">
-    <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-    <a href="/index.html">Home</a>
-    <div class="submenu">
-        <a href="/html/blog.html">Blog</a>
-        <div class="submenu-items">
-            <a href="/html/coding.html">코딩</a>
-            <div class="submenu-detail">
-                <a href="/html/python.html">파이썬</a>
-                <a href="/html/vba.html">VBA</a>
-                <a href="/html/applescript.html">애플스크립트</a>
-                <a href="/html/java.html">자바</a>
-                <a href="/html/c.html">C언어</a>
-            </div>
-            <a href="/html/security.html">보안</a>
-            <a href="/html/certificate.html">자격증</a>
-        </div>
+<div class="header" id="myHeader">
+    <div class="menu-icon" onmouseover="openNav()">
+        &#9776; Menu
     </div>
-    <!-- 추후에 다른 페이지를 추가하면 여기에 네비게이션 아이템을 추가할 수 있습니다. -->
-</div>
-
-<div class="menu-icon" onclick="openNav()">
-    &#9776; Menu
+    <div class="menu-content" id="menuContent">
+        <a href="/index.html">Home</a>
+        <a href="/html/blog.html">Blog</a>
+        <!-- You can add more navigation items here. -->
+    </div>
 </div>
