--- a/partials/header.html
+++ b/partials/header.html
@@ -1,5 +1,5 @@
 <div class="header" id="myHeader">
-    <div class="menu-icon" onmouseover="openNav()">
+    <div class="menu-icon" onmouseover="openNav()" onmouseout="closeNav()">
         &#9776; Menu
     </div>
     <div class="menu-content" id="menuContent">
