--- a/partials/header.html
+++ b/partials/header.html
@@ -1,10 +1,12 @@
-<div class="header" id="myHeader">
-    <div class="menu-icon" onmouseover="openNav()" onmouseout="closeNav()">
-        &#9776; Menu
-    </div>
-    <div class="menu-content" id="menuContent">
-        <a href="/index.html">Home</a>
+<div class="topbar">
+    <a href="/index.html">Home</a>
+    <div class="dropdown">
         <a href="/html/blog.html">Blog</a>
-        <!-- You can add more navigation items here. -->
+        <div class="dropdown-content">
+            <a href="#">Coding</a>
+            <a href="#">Security</a>
+            <a href="#">Certification</a>
+        </div>
     </div>
+    <!-- ... 기타 다른 메뉴 아이템들 ... -->
 </div>
