--- a/css/styles.css
+++ b/css/styles.css
@@ -50,6 +50,7 @@ body {
     position: absolute;
     background-color: rgba(0, 0, 0, 0.9);
     min-width: 160px;
+    left: 0;  /* This ensures the dropdown starts from the left side of the parent item */
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
 }
