--- a/css/styles.css
+++ b/css/styles.css
@@ -13,7 +13,7 @@ body {
     position: fixed;
     width: 100%;
     top: 0;
-    background-color: transparent;
+    background-color: rgba(0, 0, 0, 0.7);
     transition: background-color 0.3s;
     z-index: 1000;
 }
