--- a/partials/header.html
+++ b/partials/header.html
@@ -1,7 +1,8 @@
+<div class="overlay"></div> <!-- 오버레이 추가 -->
 <div class="topbar">
-    <a href="index.html">Home</a>
+    <a href="/index.html">Home</a>
     <div class="dropdown">
-        <a href="html/blog.html">Blog</a>
+        <a href="/html/blog.html">Blog</a>
         <div class="dropdown-content">
             <a href="#">Coding</a>
             <a href="#">Security</a>
