--- a/partials/header.html
+++ b/partials/header.html
@@ -1,7 +1,6 @@
-<div class="overlay"></div> <!-- 오버레이 추가 -->
 <div class="topbar">
-    <a href="/index.html">Home</a>
-    <div class="dropdown">
+    <a href="/index.html" class="menu-item">Home</a>
+    <div class="dropdown menu-item">
         <a href="/html/blog.html">Blog</a>
         <div class="dropdown-content">
             <a href="#">Coding</a>
@@ -11,3 +10,4 @@
     </div>
     <!-- ... 기타 다른 메뉴 아이템들 ... -->
 </div>
+<div class="overlay"></div>
