--- a/partials/header.html
+++ b/partials/header.html
@@ -3,11 +3,20 @@
     <div class="dropdown menu-item">
         <a href="/html/blog.html">Blog</a>
         <div class="dropdown-content">
-            <a href="#">Coding</a>
+            <div class="dropdown nested-dropdown">
+                <a href="#">Coding</a>
+                <div class="dropdown-content nested-content">
+                    <a href="#">JavaScript</a>
+                    <a href="#">Python</a>
+                    <a href="#">C++</a>
+                    <!-- ... 추가로 필요한 메뉴 아이템들 ... -->
+                </div>
+            </div>
             <a href="#">Security</a>
             <a href="#">Certification</a>
         </div>
     </div>
     <!-- ... 기타 다른 메뉴 아이템들 ... -->
 </div>
+
 <div class="overlay"></div>
