--- a/partials/header.html
+++ b/partials/header.html
@@ -6,17 +6,18 @@
             <div class="dropdown nested-dropdown">
                 <a href="#">Coding</a>
                 <div class="dropdown-content nested-content">
-                    <a href="#">JavaScript</a>
+                    <a href="#">Java</a>
                     <a href="#">Python</a>
                     <a href="#">C++</a>
-                    <!-- ... 추가로 필요한 메뉴 아이템들 ... -->
+                    <a href="#">apple script</a>
+                    <a href="#">JavaScript</a>
+                    <a href="#">VBA</a>
                 </div>
             </div>
             <a href="#">Security</a>
             <a href="#">Certification</a>
         </div>
     </div>
-    <!-- ... 기타 다른 메뉴 아이템들 ... -->
 </div>
 
 <div class="overlay"></div>
