--- a/css/header.css
+++ b/css/header.css
@@ -1,16 +1,19 @@
+/* topbar.css */
+
 .topbar {
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-start; /* 변경된 부분 */
     align-items: center;
     padding: 10px 5%;
     position: fixed;
     width: 100%;
     top: 0;
-    background: linear-gradient(to right, #0072B2, #68EAF9);
+    background: linear-gradient(to right, #272727, #383838);
     box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.1);
     transition: background-color 0.3s;
     z-index: 1000;
 }
+
 
 .topbar.scrolled {
     background-color: rgba(0, 0, 0, 0.9);
