--- a/partials/header.html
+++ b/partials/header.html
@@ -14,7 +14,30 @@
                     <a href="#">VBA</a>
                 </div>
             </div>
+            <div class="dropdown nested-dropdown">
+                <a href="#">Security</a>
+                <div class="dropdown-content nested-content">
+                    <a href="#">Java</a>
+                    <a href="#">Python</a>
+                    <a href="#">C++</a>
+                    <a href="#">apple script</a>
+                    <a href="#">JavaScript</a>
+                    <a href="#">VBA</a>
+                </div>
+            </div>
+            <div class="dropdown nested-dropdown">
+                <a href="#">Certification</a>
+                <div class="dropdown-content nested-content">
+                    <a href="#">Java</a>
+                    <a href="#">Python</a>
+                    <a href="#">C++</a>
+                    <a href="#">apple script</a>
+                    <a href="#">JavaScript</a>
+                    <a href="#">VBA</a>
+                </div>
+            </div>
             <a href="#">Security</a>
+
             <a href="#">Certification</a>
         </div>
     </div>
