--- a/css/dropdown.css
+++ b/css/dropdown.css
@@ -1,11 +1,11 @@
-/* dropdown.css */
+/* ... 기존의 다른 스타일 ... */
 
 .dropdown {
     position: relative;
     display: inline-block;
 }
 
-.dropdown-content {
+.dropdown-content, .nested-content {
     display: none;
     position: absolute;
     background-color: #f1f1f1;
@@ -15,14 +15,10 @@
     z-index: 1;
 }
 
-.dropdown-content a {
+.dropdown-content a, .nested-content a {
     color: white;
     padding: 12px 16px;
     text-decoration: none;
-    display: block;
-}
-
-.dropdown:hover .dropdown-content {
     display: block;
 }
 
@@ -33,17 +29,10 @@
 }
 
 .nested-content {
-    display: none;
-    position: absolute;
-    background-color: #f1f1f1;
-    min-width: 160px;
-    overflow: auto;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 2; /* 중첩된 드롭다운을 위에 표시하기 위해 z-index를 증가 */
 }
 
-.nested-dropdown:hover .nested-content {
+/* 추가: Active 클래스에 대한 스타일 */
+.dropdown-content.active, .nested-content.active {
     display: block;
-    left: 100%; /* 중첩된 드롭다운을 오른쪽에 표시 */
-    top: 0;
 }
