--- a/css/dropdown.css
+++ b/css/dropdown.css
@@ -1,8 +1,8 @@
 /* dropdown.css */
 
 .dropdown {
-    /* position: relative;
-    display: inline-block; */
+    position: relative;
+    display: inline-block;
 }
 
 .dropdown-content {
