--- a/css/overlay.css
+++ b/css/overlay.css
@@ -1,8 +1,8 @@
 .overlay {
-    /* display: none;
+    display: none;
     position: fixed;
     top: 0;
-    left: 0; */
+    left: 0;
     width: 100%;
     height: 100%;
     background: rgba(0, 0, 0, 0.5);
@@ -10,5 +10,5 @@
 }
 
 .dropdown:hover ~ .overlay {
-    /* display: block; */
+    display: block;
 }
