--- a/css/dropdown.css
+++ b/css/dropdown.css
@@ -11,9 +11,9 @@
     background-color: #1d1d1f; /* 애플 메뉴의 어두운 배경색과 유사 */
     border: 1px solid #e0e0e0; /* Grey border */
     
-    width: 80%;  /* 기본적으로 화면의 80%를 차지 */
-    max-width: 300px;  /* 드롭다운의 최대 크기 */
-    min-width: 160px;  /* 드롭다운의 최소 크기 */
+    /* width: 80%;  기본적으로 화면의 80%를 차지 */
+    /* max-width: 300px;  드롭다운의 최대 크기 */
+    /* min-width: 160px;  드롭다운의 최소 크기 */
     overflow: auto;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
