--- a/css/dropdown.css
+++ b/css/dropdown.css
@@ -10,9 +10,9 @@
     position: absolute;
     background-color: #1d1d1f; 
     border: 1px solid #e0e0e0; 
-    width: 80%;  
+    width: auto;  /* 자동 넓이 설정 */
     max-width: 300px;  
-    min-width: 160px;
+    min-width: 160px; 
     overflow: auto;  
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
