--- a/css/dropdown.css
+++ b/css/dropdown.css
@@ -31,9 +31,9 @@
     background-color: #3a3a3c;
 }
 
-.dropdown:hover .dropdown-content {
+/* .dropdown:hover .dropdown-content {
     display: block;
-}
+} */
 
 /* Nested dropdown styles */
 
