--- a/partials/header.html
+++ b/partials/header.html
@@ -3,28 +3,28 @@
     <div class="dropdown menu-item">
         <a href="/html/blog.html">Blog</a>
         <div class="dropdown-content">
-            <div class="dropdown nested-dropdown">
+            <div class="dropdown nested-dropdown coding">
                 <a href="#">Coding</a>
-                <div class="dropdown-content nested-content">
+                <div class="dropdown-content nested-content coding-content">
                     <a href="#">Java</a>
                     <a href="#">Python</a>
                     <a href="#">C++</a>
-                    <a href="#">apple script</a>
+                    <a href="#">Apple Script</a>
                     <a href="#">JavaScript</a>
                     <a href="#">VBA</a>
                 </div>
             </div>
-            <div class="dropdown nested-dropdown">
+            <div class="dropdown nested-dropdown security">
                 <a href="#">Security</a>
-                <div class="dropdown-content nested-content">
-                    <a href="#">apple script</a>
+                <div class="dropdown-content nested-content security-content">
+                    <a href="#">Apple Script</a>
                     <a href="#">JavaScript</a>
                     <a href="#">VBA</a>
                 </div>
             </div>
-            <div class="dropdown nested-dropdown">
+            <div class="dropdown nested-dropdown certification">
                 <a href="#">Certification</a>
-                <div class="dropdown-content nested-content">
+                <div class="dropdown-content nested-content certification-content">
                     <a href="#">Java</a>
                     <a href="#">Python</a>
                     <a href="#">C++</a>
@@ -33,5 +33,4 @@
         </div>
     </div>
 </div>
-
 <div class="overlay"></div>
