--- a/partials/header.html
+++ b/partials/header.html
@@ -1,36 +1,41 @@
-<div class="topbar">
-    <a href="/index.html" class="menu-item">Home</a>
-    <div class="dropdown menu-item">
-        <a href="/html/blog.html">Blog</a>
-        <div class="dropdown-content">
-            <div class="dropdown nested-dropdown coding">
-                <a href="#">Coding</a>
-                <div class="dropdown-content nested-content coding-content">
-                    <a href="#">Java</a>
-                    <a href="#">Python</a>
-                    <a href="#">C++</a>
-                    <a href="#">Apple Script</a>
-                    <a href="#">JavaScript</a>
-                    <a href="#">VBA</a>
+<header.html>
+
+    <div class="topbar">
+        <a href="/index.html" class="menu-item">Home</a>
+        <div class="dropdown menu-item">
+            <a href="/html/blog.html">Blog</a>
+            <div class="dropdown-content">
+                <div class="dropdown nested-dropdown coding">
+                    <a href="#">Coding</a>
+                    <div class="dropdown-content nested-content coding-content">
+                        <a href="#">Java</a>
+                        <a href="#">Python</a>
+                        <a href="#">C++</a>
+                        <a href="#">apple script</a>
+                        <a href="#">JavaScript</a>
+                        <a href="#">VBA</a>
+                    </div>
                 </div>
-            </div>
-            <div class="dropdown nested-dropdown security">
-                <a href="#">Security</a>
-                <div class="dropdown-content nested-content security-content">
-                    <a href="#">Apple Script</a>
-                    <a href="#">JavaScript</a>
-                    <a href="#">VBA</a>
+                <div class="dropdown nested-dropdown security">
+                    <a href="#">Security</a>
+                    <div class="dropdown-content nested-content security-content">
+                        <a href="#">apple script</a>
+                        <a href="#">JavaScript</a>
+                        <a href="#">VBA</a>
+                    </div>
                 </div>
-            </div>
-            <div class="dropdown nested-dropdown certification">
-                <a href="#">Certification</a>
-                <div class="dropdown-content nested-content certification-content">
-                    <a href="#">Java</a>
-                    <a href="#">Python</a>
-                    <a href="#">C++</a>
+                <div class="dropdown nested-dropdown certification">
+                    <a href="#">Certification</a>
+                    <div class="dropdown-content nested-content certification-content">
+                        <a href="#">Java</a>
+                        <a href="#">Python</a>
+                        <a href="#">C++</a>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
-</div>
-<div class="overlay"></div>
+    
+    <div class="overlay"></div>
+    
+    
