--- a/css/dropdown.css
+++ b/css/dropdown.css
@@ -52,4 +52,53 @@
     position: absolute;
     background-color: #1d1d1f;
     min-width: 200px;
-    box-shadow: 0px 8px 16px 0px rgba
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 2;
+    border-radius: 5px;
+    padding: 10px 0;
+    left: 100%;
+    top: 0;
+}
+
+.nested-content a {
+    color: white;
+    padding: 15px 20px;
+    text-decoration: none;
+    display: block;
+    transition: background-color 0.2s;
+}
+
+.nested-content a:hover {
+    background-color: #3a3a3c;
+}
+
+.dropdown > a, .nested-dropdown > a {
+    cursor: pointer;
+}
+
+.nested-dropdown:hover .nested-content {
+    display: block;
+}
+
+/* 새로운 코드를 추가합니다 */
+.dropdown:not(:hover) .nested-content {
+    display: none !important;
+}
+
+@media (max-width: 767px) {
+    .dropdown-content {
+        width: 100%;
+    }
+}
+
+@media (min-width: 768px) and (max-width: 991px) {
+    .dropdown-content {
+        width: 90%;
+    }
+}
+
+@media (min-width: 992px) {
+    .dropdown-content {
+        width: 80%;
+    }
+}
