--- a/css/dropdown.css
+++ b/css/dropdown.css
@@ -20,7 +20,7 @@
 }
 
 .dropdown-content a {
-    color: black;
+    color: white;
     padding: 15px 20px;
     text-decoration: none;
     display: block;
