--- a/css/dropdown.css
+++ b/css/dropdown.css
@@ -27,9 +27,9 @@
     transition: background-color 0.2s;
     
     border: 1px solid #e0e0e0;
-    width: auto;  /* 자동 넓이 설정 */
-    max-width: 300px;
-    min-width: 160px;
+    /* width: auto;  자동 넓이 설정 */
+    max-width: 280px;
+    min-width: 140px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
     border-radius: 5px;
