--- a/css/dropdown.css
+++ b/css/dropdown.css
@@ -27,13 +27,13 @@
     transition: background-color 0.2s;
     
     border: 1px solid #e0e0e0;
-    width: auto;  
-    height: auto;
+    /* width: auto;  
+    height: auto; */
     /* max-width: 280px;
     min-width: 140px; */
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    box-shadow: 1px 8px 16px 1px rgba(0,0,0,0.2);
     z-index: 1;
-    border-radius: 5px;
+    border-radius: 10px;
     
 }
 
